[package]
name = "linker-set"
version = "0.4.0"
edition = "2024"
authors = ["Sidney Cammeresi <sac@cheesecake.org>"]
license = "BSD-3-Clause"
readme = "README"
description = "Declarative programming via linker-constructed arrays"
repository = "https://github.com/cammeresi/linker-set.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linker-set-proc = { path = "proc", version = "0.4.0" }
paste = "1.0.14"
