[package]
name = "linker-set-proc"
version = "0.4.0"
edition = "2024"
authors = ["Sidney Cammeresi <sac@cheesecake.org>"]
license = "BSD-3-Clause"
readme = "README"
description = "Procedural macro for linker-set crate"
repository = "https://github.com/cammeresi/linker-set.git/proc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
paste = "1.0.14"
quote = "1.0.35"
syn = { version = "2.0.55", features = ["full"] }
